[package]
name = "native-tls"
version = "0.2.3"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A wrapper over a platform's native TLS implementation"
repository = "https://github.com/sfackler/rust-native-tls"
readme = "README.md"

[features]
vendored = ["openssl/vendored"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
security-framework = "0.3.1"
security-framework-sys = "0.3.1"
lazy_static = "1.0"
libc = "0.2"
tempfile = "3.0"

[target.'cfg(target_os = "windows")'.dependencies]
schannel = "0.1.16"

[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
log = "0.4.5"

openssl = { version = "*", git = "https://github.com/Kradxn/rust-openssl" }
openssl-sys = { version = "*", git = "https://github.com/Kradxn/rust-openssl" }
openssl-probe = "0.1"

[dev-dependencies]
hex = "0.3"
